--- a/src/index.html
+++ b/src/index.html
@@ -16,16 +16,16 @@
   <meta name="theme-color" content="#007aff">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
-  <title>My App aaa</title>
-  
-  
-  
-  
+  <title>Cosmoiler</title>
+
+
+
+
   <!-- built styles file will be auto injected -->
 </head>
 <body>
   <div id="app"></div>
-  
+
   <!-- built script files will be auto injected -->
 </body>
 </html>
