--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,11 @@
 
   <title>Cosmoiler</title>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="ios.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="ios180.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon16.png">
   <link rel="manifest" href="/manifest.json">
-  <meta name="theme-color" content="#f9f9f9">
+  <meta name="theme-color" content="#ecece0">
 
 </head>
 <body>
