--- a/www/index.html
+++ b/www/index.html
@@ -1,1 +1,32 @@
-<!doctype html><html><head><meta charset="utf-8"><meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap: content:"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,viewport-fit=cover"><meta name="format-detection" content="telephone=no"><title>Cosmoiler</title><link rel="apple-touch-icon" sizes="180x180" href="ios180.png"><link rel="icon" type="image/png" sizes="32x32" href="/favicon32.png"><link rel="icon" type="image/png" sizes="16x16" href="/favicon16.png"><link rel="manifest" href="/manifest.json"><meta name="theme-color" content="#ecece0"><link href="app.css" rel="stylesheet"></head><body><div id="app"></div><script src="app.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+  <meta charset="utf-8">
+  <!--
+  Customize this policy to fit your own app's needs. For more guidance, see:
+      https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
+  Some notes:
+    * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
+    * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
+      * Enable inline JS: add 'unsafe-inline' to default-src
+  -->
+  <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap: content:">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
+
+  <meta name="format-detection" content="telephone=no">
+<!--   <meta name="theme-color" content="#ecece0"> -->
+
+  <title>Cosmoiler</title>
+
+<!--   <link rel="apple-touch-icon" sizes="120x120" href="icon_120x120.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="icon_180x180.png"> -->
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon16.png">
+  <!-- <link rel="manifest" href="manifest.json"> -->
+  <script async src="pwacompat.min.js"></script>
+
+
+<link href="app.css" rel="stylesheet"><meta name="apple-mobile-web-app-title" content="Cosmoiler" /><meta name="apple-mobile-web-app-capable" content="yes" /><meta name="apple-mobile-web-app-status-bar-style" content="default" /><meta name="theme-color" content="#5e3e29" /><link rel="apple-touch-icon" sizes="180x180" href="icon_180x180.png" /><link rel="apple-touch-icon" sizes="120x120" href="icon_120x120.png" /><link rel="manifest" href="manifest.json" crossorigin="use-credentials" /></head>
+<body>
+  <div id="app"></div>
+<script src="app.js"></script></body>
+</html>
