sync for home PC

--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
   <script async src="pwacompat.min.js"></script>
 
 
-<link href="app.css" rel="stylesheet"><meta name="apple-mobile-web-app-title" content="Cosmoiler" /><meta name="apple-mobile-web-app-capable" content="yes" /><meta name="apple-mobile-web-app-status-bar-style" content="default" /><meta name="theme-color" content="#5e3e29" /><link rel="apple-touch-icon" sizes="180x180" href="icon_180x180.png" /><link rel="apple-touch-icon" sizes="120x120" href="icon_120x120.png" /><link rel="manifest" href="manifest.json" crossorigin="use-credentials" /></head>
+<link href="app.css" rel="stylesheet"></head>
 <body>
   <div id="app"></div>
 <script src="app.js"></script></body>
