--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicon32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon16.png">
   <!-- <link rel="manifest" href="manifest.json"> -->
+  <link rel="manifest" href="manifest.web" />
   <script async src="pwacompat.min.js"></script>
 
 
